examples/test/conf/EdgionPlugins/DynamicInternalUpstream/01_Service_default_diu-backend-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: diu-backend-canary
  namespace: default
spec:
  ports:
    - name: http
      port: 30002
      targetPort: 30002
      protocol: TCP
