examples/test/conf/EdgionPlugins/DynamicInternalUpstream/01_Service_default_diu-backend-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: diu-backend-debug
  namespace: default
spec:
  ports:
    - name: http
      port: 30003
      targetPort: 30003
      protocol: TCP
