examples/test/conf/EdgionPlugins/DynamicInternalUpstream/01_Service_default_diu-backend-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: diu-backend-stable
  namespace: default
spec:
  ports:
    - name: http
      port: 30001
      targetPort: 30001
      protocol: TCP
