examples/test/conf/EdgionPlugins/DynamicInternalUpstream/02_EndpointSlice_default_diu-backend-stable-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: diu-backend-stable-slice
  namespace: default
  labels:
    kubernetes.io/service-name: diu-backend-stable
addressType: IPv4
ports:
  - name: http
    port: 30001
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
